feat/item 상세 조회 기능 추가
